--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,6 @@ rvm:
   - 2.3.0
 before_install: gem install bundler -v 1.14.6
 script:
+  - bundle exec rake db:create
+  - bundle exec rake db:migrate
   - bundle exec rspec
