Update travis env

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,6 @@ script:
   - bundle exec rake db:create
   - bundle exec rake db:migrate
   - bundle exec rspec
+env:
+  global:
+    - rate_limit=10
